<resources>
    <string name="app_name">RPS</string>
    <string name="rent">Арендовать</string>
    <string name="register">Регистрация</string>
    <string name="login">Вход</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_text_view">Вход в аккаунт</string>
    <string name="menu_console">Консоли</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_profile">Профиль</string>
    <string name="login_button">Войти</string>
    <string name="register_notice">Зарегестрированные пользователи могут получать уведомления</string>
    <string name="for_user">Для пользователя</string>
    <string name="for_business">Для бизнеса</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="register_login">Логин:</string>
    <string name="register_name">Имя:</string>
    <string name="register_repassword">Повторите\nпароль:</string>
    <string name="register_password">Пароль:</string>
    <string name="register_email">Email:</string>
    <string name="register_telephone">Телефон:</string>
    <string name="register_city">Город:</string>
    <string name="best_consoles">Лучшие предложения</string>
    <string name="lk">Личный кабинет</string>
    <string name="add_console">Добавить консоль</string>
    <string name="business_account">Бизнес аккаунт</string>
    <string name="my_consoles">Мои консоли:</string>
    <string name="add">Добавить</string>
    <string name="console">Консоль</string>
    <string name="serial_number">Серийный номер</string>
    <string name="count_joypads">Количество джойстиков</string>
    <string name="weekday_price">Цена в будни</string>
    <string name="weekend_price">Цена в выходные</string>
    <string name="console_info">Игры и дополнительная информация:</string>
    <string name="save">Сохранить</string>
    <string name="free">Свободна</string>
    <string name="info">Информация</string>
    <string name="call">Позвонить</string>
    <string name="recovery_account">Восстановить аккаунт</string>
    <string name="recovery">Восстановить</string>
    <string name="recovery_button_text">Забыли пароль?</string>
    <string-array name="cities">
        <item>Алматы</item>
        <item>Нур-Султан</item>
        <item>Караганды</item>
        <item>Актау</item>
        <item>Атырау</item>
        <item>Павлоград</item>
        <item>Шышкент</item>
        <item>Семей</item>
        <item>Актобе</item>
        <item>Костанай</item>
        <item>Кызылорда</item>
        <item>Тараз</item>
        <item>Усть-Коменагорск</item>
    </string-array>
</resources>